--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+futures-util = "0.3.21"
+http = "0.2.7"
 serde = { version = "1.0", features = ["derive"] }
