--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+actix-web-httpauth = "0.6.0"
+base64 = "0.13.0"
 futures-util = "0.3.21"
 http = "0.2.7"
 serde = { version = "1.0", features = ["derive"] }
